Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12040

File lost during recovery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.13.0
    • Lustre 2.10.0, Lustre 2.11.0, Lustre 2.12.0, Lustre 2.13.0
    • 3
    • 9223372036854775807

      In 2011y, Johann was introduce a wire protocol changes.

      commit f90abfdc961debae069804307dcbc883b50c137c
      Author: Johann Lombardi <johann@whamcloud.com>
      Date:   Thu Dec 15 01:00:00 2011 +0100
      
         LU-169 lov: add generation number to LOV EA
      

      This commit replace an unused field 'stripe_offset' in server reply with layout generation.
      so same offset in this structure have a different purpose.
      But, author forget about replay case. in this case, LOV EA directly copied from Server reply into client source buffer. Before this change it was LOV_DEFAULT_OFFSET aka -1, but after this change it's replaced with zero for new allocated file.
      PFL landing have improve a layout checks for 'SETSTRIPE' requests, so it verified against a pool indexes now.
      –
      That's all.

      Client create a file in directory with pool assigned, but server failed. Client tries a resend open+create call but it have silence failed on replay with EINVAL in lod_verify_v1v3 as '0' isn't part of lod pool indexes.

            shadow Alexey Lyashkov
            shadow Alexey Lyashkov
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: