lustre/lod/lod_internal.h
@@ -54,8 +54,6 @@
 #define LMVEA_DELETE_VALUES(count, offset)				\
 	((count) == 0 && (offset) == (typeof(offset))(-1))
 
-#define LOV_OFFSET_DEFAULT		((__u16)-1)
-
 struct lod_qos_rr {
 	spinlock_t		 lqr_alloc;	/* protect allocation index */
 	__u32			 lqr_start_idx;	/* start index of new inode */
